---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "for i : false .. true i := false end for"
---
"i"@(FileId(1), 4..5) [ConstVar(Const, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 24..26): cannot assign into `i`
| error for (FileId(1), 22..23): `i` is a reference to a constant, not a variable
| note for (FileId(1), 4..5): `i` declared here
